    - unsafe IncreaseGoogleAnalyticsCounterAsynch routine
      removed from wgx library
    - useless fat32_xxx fields removed from winx_volume_information structure


  Version 5.0.3  2012-02-
  ------------------------------------------------------------------------------
    - one bug preventing language selection saving on installation was fixed


  Version 5.0.2  2012-01-31
  ------------------------------------------------------------------------------
    - representation of disk clusters on the cluster map was improved
    - one little bug in MFT Zone redraw was fixed
    - registry is now queried for the number of installed keyboards
      to guarantee detection of all installed keyboards
    - Installer: forced default action for .luar files to be "view"
    - the following translations were added:

      Bosanski, Arabic

    - the following translations were updated:

      Dutch

    - some additions to the intro and GUI section of the documentation
    - PDF version of the documentation is now available as separate download


  Version 5.0.1  2012-01-08
  ------------------------------------------------------------------------------
    - few important bugs in disk processing routines were fixed
    - few bugs in MFT optimizer were fixed
    - one bug causing boot time interface freeze 
      after "Good bye..." message was fixed
    - the following translations were updated:

      Finnish, Indonesian, Italian

    - some additions to the tips, FAQ and GUI sections of the documentation


  Version 5.0.0  2011-12-31
  ------------------------------------------------------------------------------
    - the following translations were added:

      Kapampangan, Georgian

    - the following translations were updated:

      Italian, Polish, Swedish, Burmese (Padauk), Finnish, Japanese

    RC2:
    - ability to defragment NTFS attribute lists was added
    - check for the volume dirty flag was added to the volume analysis